--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,21 @@
 <resources>
-    <string name="app_name">GameSessionApp</string>
+    <string name="app_name">WeatherComposeApp</string>
+
+    <string name="request_button_title">СДЕЛАТЬ НОВЫЙ ЗАПРОС</string>
+    <string name="result_button_title">ОЦЕНИТЬ</string>
+
+    <string name="input_weather_name">Погода</string>
+    <string name="input_city_name">Город</string>
+    <string name="input_degrees_name">Температура (&#176;C)</string>
+
+    <string name="historyCard_title">Недавно вы искали:</string>
+    <string name="historyCard_description">Здесь появятся ваши предыдущие запросы</string>
+
+    <string name="screen_news_title">Новости</string>
+    <string name="screen_favorite_title">Избранные новости</string>
+
+    <string name="test_lorem_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
+
+    <string name="test_full_lorem_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. \n Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
+
 </resources>
